Corrected some alignment bug in #userarea

--- a/css/index.css
+++ b/css/index.css
@@ -3597,7 +3597,7 @@ vertical-align: middle;
 	text-align: left;
 	color: #444444;
 	font:12px arial,sans-serif;
-	width: 968px;
+	width: 963px;
         background-color: #F5F5F5;
         margin-top : 0px;
         margin-bottom: 0px;
